.opsera-snakeforged/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snakeforged
  labels:
    app: snakeforged
    tenant: opsera
spec:
  type: ClusterIP
  selector:
    app: snakeforged
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
